fixing the disabled Flag background position, and ensuring that delete and approve mark requests are behind auth

--- a/ffdemo/static/assets/css/style.css
+++ b/ffdemo/static/assets/css/style.css
@@ -769,7 +769,7 @@ display: inline-block;
 	background-position: 0 -469px;
 }
 #mark-flag.disabled {
-	background-position: 0 -10px;
+	background-position: 0 -479px;
 	cursor: default;
 }
 #facebook-share,
